add check api
