# main.go
@@ -7,6 +7,7 @@ import (
 	"github.com/moonprism/kindleM/api"
 	_ "github.com/moonprism/kindleM/docs"
 	"github.com/moonprism/kindleM/lib"
+	"github.com/moonprism/kindleM/package/util"
 	"github.com/moonprism/kindleM/site/manhuagui"
 	"github.com/swaggo/gin-swagger"              // gin-swagger middleware
 	"github.com/swaggo/gin-swagger/swaggerFiles" // swagger embed files
@@ -42,8 +43,9 @@ func Work(num int) {
 func main() {
 	lib.InitLogrus()
 
-	Work(5)
+	Work(1)
 
+	util.SetProxy("127.0.0.1", "1080")
 	//file, _ := os.OpenFile(lib.Config.Log.File, os.O_APPEND|os.O_WRONLY, os.ModeAppend)
 	//
 	//gin.DisableConsoleColor()
@@ -57,7 +59,8 @@ func main() {
 
 	r.GET("/search/:query", api.Search)
 	r.GET("/chapters", api.Chapters)
-	r.POST("/download", api.DownLoad)
+	r.POST("/download", api.Download)
+	r.POST("/check/chapter/:chapter_id", api.ReDwonloadChapter)
 
 	if err := r.Run(":8001"); err != nil {
 		fmt.Printf("run gin : %v\n", err)
